<resources>
    <string name="app_name">Wanderlust</string>
    <string name="title_map">Map</string>
    <string name="title_list">My List</string>
    <string name="title_friends">My Friends</string>
    <string name="title_more">More</string>
    <string name="action_settings">Settings</string>
    <string name="heading_myList">My Favorite Locations</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="des_buttonFav">Is Button Favorite?</string>
    <string name="des_LocationName">Name of Location</string>
    <string name="des_countryName">Country</string>
    <string name="des_cityName">City Name</string>
    <string name="des_toggleFavorite">ToggleButton for favorite locations</string>
    <string name="label_categories">Categories</string>
    <string name="label_description">Description</string>
    <string name="hint_description">Write a short description.</string>
    <string name="add_picture">Add picture</string>
    <string name="label_select_picture">Select Picture (multiple possible)</string>
    <string name="save_location">Save location</string>
    <string name="pick_picture_option">How do you want to add your picture?</string>
    <string name="shared_preference_name">com.interactivemedia.backpacker.PREFERENCE_FILE_KEY</string>
    <string name="saved_token">id_token</string>
    <string name="saved_id">user_id</string>
    <string name="server_client_id">281227624759-l6dd68h5j2jlcn8scgh4g0kcn42f107l.apps.googleusercontent.com</string>
    <string name="nfc_info">Put your phone next to the phone of your new friend.  His or her phone needs to be unlocked.
        Make sure, that NFC is activated on both phones and Android Beam on your's.</string>
    <string name="first_name_label">First name</string>
    <string name="last_name_label">Last name</string>
    <string name="button_save_profile">Save profile</string>
    <string name="location_thumbnail">Thumbnail of location</string>
    <string name="no_categories">No categories specified</string>
    <string name="connection_error">Sorry, no connection to the XML file available</string>
    <string name="lvexp_setting_heading">heading</string>
    <string name="lvexp_setting_content">content</string>
    <string name="credits">This application was created by \n
        Valentin Schagerl, Julien Sanders, Jonas Scheffner and Rebecca Durm within the context of the course \n
        253060a Interactive Media (Prof. Dr. Simon Wiest) at \nStuttgart Media University.\n

        \n \n Fall Semester 2017/2018
        </string>
    <string name="howTo1">This application will help you to … </string>
    <string name="xml_error">No XML connection possible</string>
    <string name="button_change_picture">Change profile picture</string>
    <string name="description_profile_picture">Profile picture</string>
    <string name="edit_profile_button">Edit profile</string>
    <string name="des_locationDescription">Description of the location you added</string>
    <string name="search_for_user_label">Search for user</string>
    <string name="search_for_user_hint">Type in email address…</string>
    <string name="search_user_button">Search User</string>
    <string name="share_locations_button">Share locations with user</string>
    <string name="des_friendName">Name of Friend</string>
    <string name="des_avatar">Profil Image of Friend</string>
    <string name="button_deleteFriend">Remove Friend</string>
    <string name="des_favoritePlaces">Favorite Places in</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="des_noLocation">Your Friend has not saved any locations</string>
    <string name="des_marker_MapFilter">icon to show color assigned to specific person</string>
    <string name="slogan">the personal way to backpack</string>
    <string name="label_AddLocationActivity">Add a Location</string>
    <string name="label_AddFriendNfcActivity">Add a Friend</string>
    <string name="label_EditProfileActivity">Edit Your Profile</string>
    <string name="label_AddFriendEmailActivity">Share Your Locations</string>
    <string name="label_FriendsDetailsActivity">Details of This Friend</string>
    <string name="label_activity_location_details">Details of This Location</string>
    <string name="des_noOwnLocation">You have not saved any locations yet</string>
    <string name="des_noFriends">You have not added friends to your list</string>
    <string name="logout">Logout</string>
    <string name="showCredits">Show Credits</string>
    <string name="welcome">Welcome!</string>
    <string name="des_homeImage">logo Wanderlust</string>
    <string name="no_user_found">No user was found</string>
    <string name="channel_name">Wanderlust</string>
    <string name="channel_description">New notification from Wanderlust</string>
    <string name="channel_id">channel_1_wanderlust</string>
    <string name="saved_nfc_event">nfc_event</string>
    <string name="text_no_internet">You have no internet connection!</string>
    <string name="add_friend_alternative_button">Not working…</string>
    <string name="des_locationImages">Pictures of location detail</string>
    <string name="button_deleteLocation">Remove Location</string>
    <string name="add_friend_alternative_button">Not working...</string>
    <string name="saved_friend_id">friend_id</string>
    <string name="add_friend_info_offline">But this still works with NFC! →</string>
</resources>
