<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_locationName"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:text="@string/des_LocationName"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/btn_favorite"
        app:layout_constraintTop_toTopOf="@+id/btn_favorite" />

    <TextView
        android:id="@+id/tv_countryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/des_countryName"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_favorite"
        app:layout_constraintStart_toEndOf="@+id/btn_favorite" />

    <TextView
        android:id="@+id/tv_cityName"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:text="@string/des_cityName"
        app:layout_constraintStart_toEndOf="@+id/tv_locationName"
        app:layout_constraintTop_toTopOf="@+id/tv_locationName" />
    <!--
        <ToggleButton
            android:id="@+id/toggleFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/des_buttonFav"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        -->


    <ImageButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_favorite_border_black_24dp"
        android:contentDescription="@string/des_buttonFav" />


</android.support.constraint.ConstraintLayout>
