<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.interactivemedia.backpacker.AddFriendEmailActivity">


    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_for_user_hint"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/search_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="searchUser"
        android:text="@string/search_user_button"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

    <TextView
        android:id="@+id/text_view_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/search_user_button" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="shareLocations"
        android:text="@string/share_locations_button"
        app:layout_constraintTop_toBottomOf="@+id/text_view_user" />

</android.support.constraint.ConstraintLayout>
