<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/tv_firstName"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/des_LocationName"
        android:textSize="@dimen/heading2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_countryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/des_countryName"
        android:textSize="@dimen/floatingText"
        app:layout_constraintStart_toEndOf="@+id/tv_cityName"
        app:layout_constraintTop_toBottomOf="@+id/tv_firstName"
        android:layout_marginBottom="@dimen/margin_normal"/>

    <TextView
        android:id="@+id/tv_cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="8dp"
        android:text="@string/des_cityName"
        android:textSize="@dimen/floatingText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@+id/tv_firstName" />


    <ImageView
        android:id="@+id/iv_favorite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/des_buttonFav"
        app:layout_constraintBottom_toBottomOf="@+id/tv_countryName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_firstName"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_favorite_border_black_24dp"
        tools:ignore="VectorDrawableCompat" />



</android.support.constraint.ConstraintLayout>
