<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/label_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_double"
        android:text="@string/label_categories"
        android:textSize="@dimen/place_autocomplete_prediction_secondary_text"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/addPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:onClick="openDialog"
        android:text="@string/add_picture"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/label_picture" />

    <TextView
        android:id="@+id/text_view_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/heading1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine"
        android:textSize="@dimen/floatingText"
        app:layout_constraintTop_toBottomOf="@+id/label_description" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/addPicture">

        <LinearLayout
            android:id="@+id/image_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="saveLocation"
            android:text="@string/save_location"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="81dp"
            android:layout_height="152dp"
            android:layout_gravity="center"
            android:visibility="gone" />

    <TextView
        android:id="@+id/label_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_double"
        android:text="@string/label_select_picture"
        android:textSize="@dimen/place_autocomplete_prediction_secondary_text"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <com.interactivemedia.backpacker.helpers.MultiSelectionSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/label_categories" />

    <TextView
        android:id="@+id/label_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_double"
        android:text="@string/label_description"
        android:textSize="@dimen/place_autocomplete_prediction_secondary_text"
        app:layout_constraintTop_toBottomOf="@+id/text_view_location"/>
    </android.support.constraint.ConstraintLayout>
    </ScrollView>