<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.interactivemedia.backpacker.activities.EditProfileActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/label_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:labelFor="@id/edit_text_first_name"/>
    <EditText
        android:id="@+id/edit_text_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/label_first_name"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/label_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name_label"
        android:labelFor="@id/edit_text_last_name"
        app:layout_constraintTop_toBottomOf="@id/edit_text_first_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/edit_text_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/label_last_name"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:onClick="saveProfile"
        />


</android.support.constraint.ConstraintLayout>
