<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_normal"
    android:layout_marginBottom="56dp"
    tools:context="com.interactivemedia.backpacker.fragments.SettingsFragment">

    <!-- this button is kinda for testing purposes, redesign later -->


    <Button
        android:id="@+id/button_open_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/edit_profile_button"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/button_show_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/showCredits"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/button_open_profile"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints,UnusedAttribute" />


    <Button
        android:id="@+id/button_logout"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute" />


    <!--<ExpandableListView-->
    <!--android:id="@+id/lvexp_settings"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="380dp"-->
    <!--android:layout_marginBottom="@dimen/margin_normal"-->
    <!--android:layout_marginEnd="@dimen/margin_normal"-->
    <!--android:layout_marginStart="@dimen/margin_normal"-->
    <!--android:layout_marginTop="@dimen/margin_normal"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.0"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--app:layout_constraintVertical_bias="0.18" />-->


</android.support.constraint.ConstraintLayout>
